test/fails/bad_functions/void2.lgl
void f() {
    return;
}

void main() {
    print f(); // Cannot use a void function
}